--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.midterm">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,6 +34,7 @@
 
         <activity android:name=".HomeDashBoard" />
         <activity android:name=".StudentListActivity" />
+        <activity android:name=".DataExchangeActivity" />
     </application>
 
 </manifest>
