Fixed View the List of System Users, View Login History of a User. And added back button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".StudentListActivity" />
         <activity android:name=".DataExchangeActivity" />
         <activity android:name=".StudentDetailsActivity" />
+        <activity android:name=".SystemUsersActivity" />
+        <activity android:name=".LoginHistoryActivity" />
 
     </application>
 
